style: format the sources with palantir-java-format, ktlint and oxfmt